ui: Fix null title if current title was selected
Closes #1361

--- a/public/index.html
+++ b/public/index.html
@@ -914,7 +914,7 @@
           this.selectedTitle = curTitle
           let col = $('<div>').addClass('col-12')
           let inputGroup = $('<div>').addClass('input-group')
-            .data('title', this.curTitle)
+            .data('title', this.selectedTitle)
             .data('game', this.selectedGame)
             .on('click', (ev) => {
               // remove checks on all radios
