--- a/public/pages/alias/edit.html
+++ b/public/pages/alias/edit.html
@@ -109,21 +109,22 @@
             if (this.validateForm()) {
               this.states.save = 1
               const data = {
-                _id: commons.urlParam('id') ? commons.urlParam('id') : null,
+                _id: this.id,
                 alias: this.alias.trim(),
                 command: this.command.trim(),
                 permission: this.permission,
                 visible: this.visible,
                 enabled: this.enabled
               }
-              this.socket.emit('alias.update', [data], (err, _id) => {
+              this.socket.emit('alias.update', [data], (err, data) => {
                 if (err) {
                   console.error(err)
                   return this.states.save = 3
                 }
                 this.states.save = 2
                 this.pending = false
-                this.id = _id
+                this.id = String(data._id)
+                page('?id=' + this.id + '/#alias/edit', )
                 setTimeout(() => this.states.save = 0, 1000)
               })
             }
