--- a/public/pages/viewers/edit.html
+++ b/public/pages/viewers/edit.html
@@ -301,18 +301,19 @@
         saveChanges: function () {
           this.states.save = 1
           const data = {
-            _id: commons.urlParam('id') ? commons.urlParam('id') : null,
+            _id: this.id,
             viewer: this.viewer
           }
           if (!this.states.delete) {
-            this.socket.emit('update.viewer', {items: [data]}, (err, _id) => {
+            this.socket.emit('update.viewer', {items: [data]}, (err, data) => {
               if (err) {
                 console.error(err)
                 return this.states.save = 3
               }
               this.states.save = 2
               this.pending = false
-              this.id = _id
+              this.id = String(data._id)
+              page('?id=' + this.id + '/#viewers/edit')
               setTimeout(() => this.states.save = 0, 1000)
             })
           } else {
