--- a/public/index.html
+++ b/public/index.html
@@ -524,7 +524,7 @@
     page('/', function(p){
       const id = p.hash.length === 0 ? 'dashboard' : p.hash
       if (currentPage === id) return
-
+      else currentPage = id
       var visibility = id !== 'dashboard' ? 'none' : 'flex'
       var visibilityBlock = id !== 'dashboard' ? 'none' : 'block'
 
@@ -532,7 +532,6 @@
 
       if (id !== 'dashboard') $("#pages").append($('<div id="P' + id + '">').load('pages/' + id + '.html',
         function (err) {
-          currentPage = id
           commons.translate()
           $('a[data-toggle="tab"]').off()
           $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
